--- a/style.css
+++ b/style.css
@@ -2,3 +2,10 @@ html, body {
   height: 100%;
   width: 100%;
 }
+
+label {
+    width:180px;
+    clear:left;
+    text-align:right;
+    padding-right:10px;
+}
